Dockerfile 删除jvm参数